--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -49,11 +49,11 @@
         android:layout_height="0dp"
         android:layout_weight="1" >
 
-        <com.android.game2048.GameView
+        <com.ouyang.view.GameView
             android:id="@+id/gameView"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent" >
-        </com.android.game2048.GameView>
+        </com.ouyang.view.GameView>
 
     </LinearLayout>
 
