--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -1,6 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.android.game2048.MainActivity" >
+    tools:context="com.zishinan.forever2048.MainActivity" >
 
     <item
         android:id="@+id/action_settings"
