--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -42,6 +42,21 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/newgame" />
+    <Button
+        android:id="@+id/btnYangxi"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/yangxi" />
+    <Button
+        android:id="@+id/btnSave"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/save" />
+    <Button
+        android:id="@+id/btnRead"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/read" />
 
     <LinearLayout
         android:id="@+id/gameContainer"
