--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -79,5 +79,17 @@
             android:layout_height="fill_parent" >
         </com.zishinan.forever2048.model.GameView>
     </LinearLayout>
+    
+    <LinearLayout 
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+        
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/txtContent"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
 
 </LinearLayout>
